# mesmer

./: .gitattributes  .gitignore  .pre-commit-config.yaml  .readthedocs.yml  AUTHORS  CHANGELOG.rst  MANIFEST.in  Makefile  README.md  README.rst  ROADMAP.md  environment.yml  pyproject.toml  setup.cfg  setup.py  test_m_integration.ipynb  versioneer.py
.github/: PULL_REQUEST_TEMPLATE.md
.github/workflows/: .dependabot.yml  ci-additional.yml  ci-cd-workflow.yml  ci-workflow.yml  pypi-release.yaml  upstream-dev-ci.yaml
ci/: install-upstream-wheels.sh  min_deps_check.py  minimum-dependency-versions-policy.yml
ci/requirements/: min-all-deps.yml  py39-min-all-deps.yml
configs/: config_across_scen_T_cmip6ng_sspall.py  config_across_scen_T_cmip6ng_test.py  config_attrib_emu_T_obs.py  config_cmip5ng_tas_rcp85_obs.py
data/: README.md
data/obs/: tau.line_2012.12.txt
doc/: make.bat
doc/source/: api.rst  conf.py  index.rst  installation.rst
docs/: Makefile  api.rst  conf.py  development.rst  environment.yml  index.rst  installation.rst  make.bat  tutorials.rst
docs/source/: api.rst  api_legacy.rst  authors.rst  conf.py  data_provenance.rst  development.rst  index.rst  installation.rst  license.rst  parameters.rst  publications.rst
docs/tutorials/: tutorial_mesmer_multiple_scenarios.ipynb
examples/: Dataset_surfer.ipynb  attrib_emu_T_create_emus_l.py  attrib_emu_T_create_esm-specific_statistics.py  attrib_emu_T_create_top5_regional_averages.py  config_across_scen_T_cmip6ng_test.py  config_tas_cmip6ng_example.py  example_mesmer_m.ipynb  example_mesmer_m.py  example_mesmer_m_scen_ens.ipynb  example_mesmer_mtp.ipynb  example_mesmer_x.ipynb  example_mesmer_x.py  train_create_emus_automated.py  tutorial_mesmer_calibrate_multiple_scenarios.ipynb  tutorial_mesmer_emulating_multiple_scenarios.ipynb  tutorial_mesmer_multiple_scenarios.ipynb
examples/legacy/: config_tas_cmip6ng_example.py
legacy_mesmer/calibrate_mesmer/: __init__.py  train_gt.py  train_gv.py
mesmer/: __init__.py  _version.py  anomaly.py  datatree.py  example_data.py  geospatial.py  grid.py  mask.py  resample.py  testing.py  volc.py  weighted.py
mesmer/_core/: _data.py  anomaly.py  datatree.py  geospatial.py  grid.py  mask.py  options.py  utils.py  volc.py  weighted.py
mesmer/calibrate_mesmer/: __init__.py  calibrate_mesmer.py  train_gt.py  train_gv.py  train_lt.py  train_lv.py  train_utils.py
mesmer/core/: __init__.py  _data.py  _datatreecompat.py  anomaly.py  auto_regression.py  computation.py  datatree.py  example_data.py  geospatial.py  grid.py  linear_regression.py  localized_covariance.py  mask.py  options.py  regionmaskcompat.py  smoothing.py  types.py  utils.py  volc.py  weighted.py
mesmer/create_emulations/: __init__.py  create_emus_gt.py  create_emus_gv.py  create_emus_lt.py  create_emus_lv.py  make_realisations.py  merge_emus.py  utils.py
mesmer/distrib/: __init__.py  _conditional_distribution.py  _distrib_checks.py  _expression.py  _first_guess.py  _optimizers.py  _probability_integral_transform.py  _utils.py
mesmer/io/: __init__.py  _load_cmipng.py  load_cmipng.py  load_constant_files.py  load_mesmer.py  load_obs.py  save_mesmer_bundle.py
mesmer/mesmer_m/: README.md  __init__.py  harmonic_model.py  power_transformer.py  tas_emu_monthly_full_eval-v1.ipynb  test_mesmer_m_utils.py  tests_harmonic_model.py  utils.py
mesmer/mesmer_x/: Expression.py  OLD_train_l_distrib.py  __init__.py  _conditional_distribution.py  _distrib_checks.py  _distrib_tests.py  _expression.py  _first_guess.py  _optimizers.py  _probability_integral_transform.py  _weighting.py  create_emus_l_distrib.py  example_mesmer_x.py  first_guess.py  load_cmip_mesmerx.py  temporary_config_all.py  temporary_spatial.py  temporary_support.py  train_l_distrib_mesmerx.py  train_utils_mesmerx.py
mesmer/prototype/: calibrate.py  calibrate_multiple.py  utils.py
mesmer/stats/: __init__.py  _auto_regression.py  _gaspari_cohn.py  _harmonic_model.py  _linear_regression.py  _localized_covariance.py  _power_transformer.py  _principal_component_decomposition.py  _regularized_glm.py  _smoothing.py  _xarray_kde.py  _xarray_pca.py  _xarray_pipelines.py  _xarray_transformers.py  auto_regression.py  linear_regression.py  localized_covariance.py  smoothing.py
mesmer/utils/: __init__.py  convert.py  regionmaskcompat.py  select.py  xrcompat.py
mesmer/xarray_utils/: __init__.py  global_mean.py  globmean.py  grid.py  mask.py
mesmer_m/: README.md  Untitled.ipynb  harmonic_model.py  tas_emu_monthly_full_eval-v1.ipynb  tests_harmonic_model.py
scripts/: test_install.py
tests/: conftest.py  test_load_cmipng.py  test_phi_gc.py
tests/integration/: config_train_and_emulate_legacy.py  test_auto_regression.py  test_calibrate_mesmer.py  test_calibrate_mesmer_m.py  test_calibrate_mesmer_newcodepath.py  test_calibrate_mesmer_x.py  test_core_integration.py  test_draw_mesmer_m.py  test_draw_realisations_from_bundle.py  test_draw_realisations_mesmer_m.py  test_draw_realisations_mesmer_newcodepath.py  test_draw_realisations_mesmer_x.py  test_linear_regression.py  test_load_cmipng.py  test_localized_covariance.py  test_prototype.py  test_smoothing.py  test_train_and_emulate_legacy.py  test_utils.py  test_volc.py  utils.py
tests/legacy/: test_calibrate_mesmer.py  test_draw_realisations_from_bundle.py  test_load_cmipng.py
tests/test-data/: test-mesmer-bundle.pkl  test_make_realisations_expected_output.nc
tests/unit/: __init__.py  test_anomaly.py  test_auto_regression.py  test_auto_regression_scen_ens.py  test_computation.py  test_core.py  test_data.py  test_datatree.py  test_example_data.py  (+30 more)
tutorials/: example_mesmer_mtp.ipynb  example_mesmer_mtp_precipitation.ipynb  example_mesmer_x.ipynb  example_mesmer_x.py  tutorial_mesmer_calibrate_multiple_scenarios.ipynb  tutorial_mesmer_emulating_multiple_scenarios.ipynb  tutorial_mesmer_m_calibrate_multiple_scenarios.ipynb  tutorial_mesmer_m_emulate_multiple_scenarios.ipynb  tutorial_mesmer_m_scen_ens.ipynb  tutorial_mesmer_x.ipynb  tutorial_mesmer_x_calibrate.ipynb  tutorial_mesmer_x_emulate.ipynb
(+154 files in other folders)
