[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = "no-guess-dev"

[tool.ruff]
# also check notebooks
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let the formatter worry about this
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
extend-select = [
  "E", # pycodestyle - Errors
  "F", # Pyflakes
  "I", # isort
  "TID",  # flake8-tidy-imports (absolute imports)
  "UP", # Pyupgrade
  "W", # pycodestyle - Warnings
]
extend-safe-fixes = [
  "TID252",  # absolute imports
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["mesmer"]
