[build-system]
requires = [
    "setuptools>=42",
    "setuptools_scm>=7.0",
]
build-backend = "setuptools.build_meta"

[tool.setuptools_scm]
fallback_version = "999"
version_scheme = "no-guess-dev"

[tool.ruff]
# also check notebooks
extend-include = ["*.ipynb"]
target-version = "py310"

[tool.ruff.lint]
# E402: module level import not at top of file
# E501: line too long - let the formatter worry about this
# E731: do not assign a lambda expression, use a def
ignore = [
  "E402",
  "E501",
  "E731",
]
select = [
  "F", # pyflakes
  "E", # pycodestyle - errors
  "W", # pycodestyle - warnings
  "I", # isort
  "TID", # flake8-tidy-imports (absolute imports)
  "UP", # pyupgrade
]
extend-safe-fixes = [
  "TID252",  # absolute imports
]

[tool.ruff.lint.flake8-tidy-imports]
# Disallow all relative imports.
ban-relative-imports = "all"

[tool.ruff.lint.isort]
known-first-party = ["mesmer"]

[tool.mypy]
exclude = [
  'build',
  "ci",
  "devel",
  "dist",
  "examples",
]
files = "mesmer"

show_error_context = true
warn_redundant_casts = true
warn_unused_configs = true
warn_unused_ignores = true

[[tool.mypy.overrides]]
ignore_missing_imports = true
module = [
  "cftime.*",
  "filefisher.*",
  "joblib.*",
  "pooch.*",
  "properscoring.*",
  "scipy.*",
  "setuptools.*",
  "shapely.*",
  "sklearn.*",
  "statsmodels.*",
]

[tool.typos]

[tool.typos.default]

[tool.typos.default.extend-words]

# abbreviations
varn = "varn"
strat = "strat"

[tool.typos.type.jupyter]
# avoid fixing the id hashes in jupyter notebooks
extend-ignore-re = [
    "\"id\": \".*\"",
]
