[metadata]
name = mesmer-emulator
author = mesmer developers
author_email = mesmer@env.ethz.ch
license = GPLv3+
keywords = climate atmosphere "Earth System Model Emulator"
description = Modular Earth System Model Emulator with spatially Resolved output
long_description_content_type=text/x-rst
long_description = file: README.rst
url = https://github.com/MESMER-group/mesmer
project_urls =
    Documentation = https://mesmer-emulator.readthedocs.io
    Source = https://github.com/MESMER-group/mesmer
    BugReports = https://github.com/MESMER-group/mesmer/issues
classifiers =
    Development Status :: 4 - Beta
    License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)
    Operating System :: OS Independent
    Intended Audience :: Science/Research
    Programming Language :: Python
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    Programming Language :: Python :: 3.12
    Topic :: Scientific/Engineering
    Topic :: Scientific/Engineering :: Atmospheric Science

[options]
packages = find:
zip_safe = False  # https://mypy.readthedocs.io/en/latest/installed_packages.html
include_package_data = True
python_requires = >=3.9
install_requires =
    dask[array,distributed]
    joblib
    netcdf4
    numpy
    packaging
    pandas >=2.0
    pooch
    properscoring
    pyproj
    regionmask >=0.9
    scikit-learn # only for the tests
    scipy
    statsmodels >=0.13
    xarray >=2023.04 # because pandas 2 is required

[options.extras_require]
complete =
    %(viz)s

viz =
    cartopy
    matplotlib
    nc-time-axis

docs =
    ipython
    numpydoc
    sphinx
    sphinx-book-theme

tests =
    pytest-cov
    pytest-xdist
    pytest

dev =
    %(complete)s
    %(docs)s
    %(tests)s
    black !=23
    flake8
    isort

[flake8]
ignore=
    # E203: whitespace before ':' - doesn't work well with black
    # E402: module level import not at top of file
    # E501: line too long - let black worry about that
    # E731: do not assign a lambda expression, use a def
    # W503: line break before binary operator
    E203, E402, E501, E731, W503
exclude=
    build
    docs
    .git
    tmp/

[isort]
profile=black
default_section=THIRDPARTY
known_first_party=mesmer

[coverage:run]
omit =
    */tests/*, */scripts/*, */examples/*, */configs/*, */mesmer/_version.py

[tool:pytest]
addopts = --strict-markers
python_files = test_*.py
testpaths = tests/
filterwarnings =
    ignore:numpy.ndarray size changed, may indicate binary incompatibility:RuntimeWarning
